--- a/register.html
+++ b/register.html
@@ -29,27 +29,18 @@
 
 <main class="main">
 <section class="container section">
-  <h2>Реєстрація команди</h2>
-  <form id="register-form" class="form card">
-    <div class="row">
-      <div><label>Назва команди<input class="input" required name="team" placeholder="DK Два Кума"></label></div>
-      <div><label>Капітан<input class="input" required name="captain" placeholder="Прізвище Ім'я"></label></div>
-    </div>
-    <div class="row">
-      <div><label>Телефон<input class="input" required name="phone" placeholder="+380..."></label></div>
-      <div><label>Email<input type="email" class="input" name="email" placeholder="you@example.com"></label></div>
-    </div>
-    <div class="row">
-      <div><label>Склад команди<textarea class="textarea" name="members" placeholder="2–3 учасники + тренер (за наявності)"></textarea></label></div>
-      <div><label>Побажання по зоні<select class="select" name="zone">
-        <option value="">Без різниці</option>
-        <option>A</option><option>B</option><option>C</option>
-      </select></label></div>
-    </div>
-    <label><input type="checkbox" name="agree" required> Погоджуюсь з регламентом</label>
-    <button class="btn btn--primary" type="submit">Надіслати заявку</button>
-    <p class="form__hint">Після відправки вас перекине на сторінку подяки. Дані збережуться локально у вашому браузері (для експорту).</p>
-  </form>
+  <h2>Реєстрація команд</h2>
+<p>Будь ласка, заповніть форму нижче для участі у змаганнях STOLAR CARP 2026.</p>
+
+<iframe 
+  src="https://docs.google.com/forms/d/e/1FAIpQLSexMHWGxNNqbxnSH8sfHFkej1yrE-zBdXKHxYHGq_L3oaJuCg/viewform?embedded=true" 
+  width="100%" 
+  height="1600" 
+  frameborder="0" 
+  marginheight="0" 
+  marginwidth="0">
+Завантаження…
+</iframe>
 </section>
 </main>
 
