--- a/register.html
+++ b/register.html
@@ -32,16 +32,21 @@
   <h2>Реєстрація команд</h2>
 <p>Будь ласка, заповніть форму нижче для участі у змаганнях STOLAR CARP 2026.</p>
 
-<iframe 
-  src="https://docs.google.com/forms/d/e/1FAIpQLSexMHWGxNNqbxnSH8sfHFkej1yrE-zBdXKHxYHGq_L3oaJuCg/viewform?embedded=true" 
-  width="100%" 
-  height="1600" 
-  frameborder="0" 
-  marginheight="0" 
-  marginwidth="0">
-Завантаження…
-</iframe>
-</section>
+<main class="main">
+  <section class="container section">
+    <h2>Реєстрація команд</h2>
+    <p>Будь ласка, заповніть форму нижче для участі у змаганнях STOLAR CARP 2026.</p>
+
+    <iframe 
+      src="https://docs.google.com/forms/d/e/1FAIpQLSexMHWGxNNqbxnSH8sfHFkej1yrE-zBdXKHxYHGq_L3oaJuCg/viewform?embedded=true" 
+      width="100%" 
+      height="1600" 
+      frameborder="0" 
+      marginheight="0" 
+      marginwidth="0">
+      Завантаження…
+    </iframe>
+  </section>
 </main>
 
 <footer class="footer">
