--- a/register.html
+++ b/register.html
@@ -1,12 +1,59 @@
 <!doctype html>
-<html lang="ук">
+<html lang="uk">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Реєстрація — STOLAR CARP</title>
   <link rel="stylesheet" href="assets/css/main.css">
   <script defer src="assets/js/config.js"></script>
+
+  <style>
+    .image-banner {
+      text-align: center;
+      margin: 24px 0;
+    }
+    .image-banner img {
+      max-width: 100%;
+      border-radius: 16px;
+      box-shadow: 0 8px 28px rgba(0, 0, 0, 0.45);
+      opacity: 0;
+      transition: opacity 1s ease;
+    }
+    .image-banner img.loaded {
+      opacity: 1;
+    }
+
+    .sc-form-wrap {
+      background: #111;
+      padding: 24px;
+      border-radius: 16px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.45);
+      overflow: hidden;
+      border: 1px solid #222;
+      max-width: 980px;
+      margin: 0 auto 28px;
+    }
+
+    .sc-form-frame {
+      display: block;
+      width: 100%;
+      height: 1700px;
+      border: 0;
+      margin: 0;
+      transform: translateY(-36px);
+      background: #111;
+      border-radius: 12px;
+    }
+
+    @media (max-width: 768px) {
+      .sc-form-frame {
+        height: 1900px;
+        transform: translateY(-42px);
+      }
+    }
+  </style>
 </head>
+
 <body>
 <header class="header">
   <div class="container header__row">
@@ -28,21 +75,24 @@
 </header>
 
 <main class="main">
-<section class="container section">
-  <h2>Реєстрація команд</h2>
-<p>Будь ласка, заповніть форму нижче для участі у змаганнях STOLAR CARP 2026.</p>
-
-<main class="main">
   <section class="container section">
-    <iframe 
-      src="https://docs.google.com/forms/d/e/1FAIpQLSexMHWGxNNqbxnSH8sfHFkej1yrE-zBdXKHxYHGq_L3oaJuCg/viewform?embedded=true" 
-      width="100%" 
-      height="1600" 
-      frameborder="0" 
-      marginheight="0" 
-      marginwidth="0">
-      Завантаження…
-    </iframe>
+    <h2>Реєстрація команд</h2>
+
+    <!-- Фото-банер -->
+    <div class="image-banner">
+      <img src="assets/dk-dva-kuma-banner.jpg" alt="DK Dva Kuma Banner" onload="this.classList.add('loaded')">
+    </div>
+
+    <p>Будь ласка, заповніть форму нижче для участі у змаганнях STOLAR CARP 2026.</p>
+
+    <!-- Темна форма без підпису Google -->
+    <div class="sc-form-wrap">
+      <iframe
+        class="sc-form-frame"
+        src="https://docs.google.com/forms/d/e/1FAIpQLSexMHWGxNNqbxnSH8sfHFkej1yrE-zBdXKHxYHGq_L3oaJuCg/viewform?embedded=true"
+        allowfullscreen>
+      </iframe>
+    </div>
   </section>
 </main>
 
@@ -55,5 +105,12 @@
     </div>
   </div>
 </footer>
+
+<script>
+  const banner = document.querySelector('.image-banner img');
+  if(banner){
+    banner.addEventListener('load', ()=>banner.classList.add('loaded'));
+  }
+</script>
 </body>
 </html>
