--- a/index.html
+++ b/index.html
@@ -14,10 +14,19 @@
 <body>
 <header class="header">
   <div class="container header__row">
-    <a class="logo" href="index.html">
-      <span class="logo__mark">SC</span>
-      <span class="logo__text">STOLAR CARP</span>
-    </a>
+    <a class="logo logo--flag" href="index.html" aria-label="STOLAR CARP — на головну">
+  <svg class="logo__fish" viewBox="0 0 64 32" aria-hidden="true">
+    <defs>
+      <linearGradient id="gradFlag" x1="0%" y1="0%" x2="100%" y2="0%">
+        <stop offset="0%" stop-color="#f6c34c"/>
+        <stop offset="35%" stop-color="#cc6a2b"/>
+        <stop offset="100%" stop-color="#7a0f2b"/>
+      </linearGradient>
+    </defs>
+    <path fill="url(#gradFlag)" d="M6 17c7-6 16-9 26-8 3 0 6 1 9 3 3 2 5 4 8 4-3 2-5 4-8 6-3 2-6 3-9 3-10 1-19-2-26-8zM6 17l-4 2 4 2c1 0 2-1 2-2s-1-2-2-2zm34-4c-2 0-3 1-3 2s1 2 3 2 3-1 3-2-1-2-3-2z"/>
+  </svg>
+  <span class="logo__text logo__text--grad">STOLAR&nbsp;CARP</span>
+</a>
     <nav class="nav" id="nav">
       <a href="index.html" class="nav__link nav__link--active">Головна</a>
       <a href="rules.html" class="nav__link">Регламент</a>
