--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
   <div class="container footer__row">
     <div>© 2025 STOLAR CARP · Львівщина</div>
     <div class="footer__links">
-      <a href="https://t.me/" target="_blank">Telegram</a>
-      <a href="https://www.youtube.com/" target="_blank">YouTube</a>
+      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
+      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
     </div>
   </div>
 </footer>
