--- a/live.html
+++ b/live.html
@@ -68,8 +68,8 @@
   <div class="container footer__row">
     <div>© 2025 STOLAR CARP · Львівщина</div>
     <div class="footer__links">
-      <a href="https://t.me/">Telegram</a>
-      <a href="https://www.youtube.com/">YouTube</a>
+      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
+      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
     </div>
   </div>
 </footer>
