--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <section class="hero container">
   <div class="hero__card">
     <span class="hero__kicker">Сезон 2025</span>
-    <h1>STOLAR CARP — змагання з коропфішингу</h1>
+    <h1>STOLAR CARP — змагання з риболовлі</h1>
     <p>Офіційний сайт серії турнірів у Львівській області. Реєстрація, регламент, live-протоколи та рейтинг.</p>
     <div class="cta-row">
       <a class="btn btn--primary" href="register.html">Подати заявку</a>
@@ -57,12 +57,12 @@
   <div class="grid grid-2">
     <div class="card">
       <h3>Наступний тур</h3>
-      <div class="kpi"><span class="num">Лелехівка</span> <span class="tag">24 команди</span></div>
-      <p class="form__hint">Оновлено: 11.10.2025</p>
+      <div class="kpi"><span class="num">Лелехівка</span> <span class="tag">STOLAR CARP RELAX</span></div>
+      <p class="form__hint">Оновлено: 24.10.2025</p>
     </div>
     <div class="card">
       <h3>Благодійність</h3>
-      <p>Частину внесків спрямовуємо на підтримку захисників та місцевих ініціатив.</p>
+      <p>Частину внесків спрямовуємо на підтримку захисників.</p>
       <span class="badge badge--success">Підтримаймо разом</span>
     </div>
     <div class="card">
@@ -80,8 +80,8 @@
 <section class="section container">
   <h2>Останні новини</h2>
   <div class="grid grid-3">
-    <article class="card"><h3>Stalker 2025</h3><p>Експрес-формат. Усі в рівних умовах: холод чи спека — ловимо!</p></article>
-    <article class="card"><h3>Фінал сезону</h3><p>Підсумковий етап з трансляцією live-протоколу та нагородженням.</p></article>
+    <article class="card"><h3>Stalker 2025</h3><p>Експрес-формат. Усі в рівних умовах: холод чи спека — ловимо свої трофеї!</p></article>
+    <article class="card"><h3>Фінал сезону</h3><p>18 найкращих команд сезону змагаються за першість.</p></article>
     <article class="card"><h3>Нові партнери</h3><p>Дякуємо брендам, що підтримують карпфішинг у регіоні.</p></article>
   </div>
 </section>
@@ -89,7 +89,7 @@
 
 <footer class="footer">
   <div class="container footer__row">
-    <div>© 2025 STOLAR CARP · Львівщина</div>
+    <div>© 2025 STOLAR CARP · Львів</div>
     <div class="footer__links">
       <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
       <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
