--- a/lakes.html
+++ b/lakes.html
@@ -40,7 +40,7 @@
       <p>Глибокі ділянки, добрий потенціал Big Fish.</p>
     </div>
     <div class="card">
-      <h3>Trophy Valley</h3>
+      <h3>Пристань</h3>
       <p>Стабільний кльов у міжсезоння, зручна інфраструктура.</p>
     </div>
   </div>
