--- a/lakes.html
+++ b/lakes.html
@@ -41,7 +41,7 @@
     </div>
     <div class="card">
       <h3>Пристань</h3>
-      <p>Стабільний кльов у міжсезоння, зручна інфраструктура.</p>
+      <p>Гарні екземпляри білого амура, зручна інфраструктура.</p>
     </div>
   </div>
 </section>
