--- a/rules.html
+++ b/rules.html
@@ -43,13 +43,168 @@
     <li>Оновлення протоколів: до 5 хв після зважування.</li>
     <li>Фінансові умови: внесок не повертається згідно регламенту.</li>
   </ul>
-  <p class="form__hint">* За потреби текст можна замінити на офіційний документ.</p>
+  <p class="form__hint">* 🏆 РЕГЛАМЕНТ ЗМАГАНЬ STOLAR CARP 2025
+
+(універсальний для командних та індивідуальних турнірів)
+
+1. Загальні положення
+
+1.1. Змагання проводяться у форматі «зловив — відпустив».
+1.2. До участі допускаються всі бажаючі рибалки, незалежно від досвіду — як команди, так і одиночні спортсмени (сталкери).
+1.3. Мета турніру — розвиток спортивного карпфішингу, популяризація чесної гри та підтримка Збройних Сил України.
+1.4. Дозволено ловлю на будь-які вудилища з оснастками типу класика або флет (метод), з одним гачком на оснащенні.
+1.5. Змагання проводяться за принципом спортивного та гуманного ставлення до риби.
+1.6. Усі учасники зобов’язані дотримуватись цього регламенту та правил водойми, на якій проходять змагання.
+1.7. Організатор має право вносити зміни у програму чи правила, якщо це не впливає на чесність змагання.
+
+
+---
+
+2. Формат участі
+
+2.1. Турніри STOLAR CARP можуть проводитись у двох форматах:
+
+Командний (2–3 учасники на сектор);
+
+Одиночний (STALKER – один спортсмен у секторі).
+2.2. Для обох форматів діють однакові правила поведінки, дисципліни та заліку.
+2.3. Після реєстрації учасники додаються у Viber-групу «STOLAR CARP», де публікується офіційна інформація, зважування та підсумки.
+2.4. Учасники під час змагань повинні бути в манішках, виданих організаторами. Перебування без манішки — жовта картка.
+2.5. Організатор має право відмовити в участі без пояснення причин.
+
+
+
+---
+
+3. Поведінка та дисципліна
+
+3.1. Учасники повинні поводитися етично, спокійно та з повагою до інших рибалок, суддів і організаторів.
+3.2. Забороняється:
+
+ловити або годувати за межами свого сектору;
+
+заважати сусідам (надмірний шум, закидання у чужу зону, підсвічування тощо);
+
+вживати алкоголь у великих дозах або перебувати у стані сильного сп’яніння;
+
+проявляти агресію, некоректну поведінку чи неповагу;
+
+приховувати або спотворювати результати вилову.
+3.3. Куріння дозволене лише у межах свого сектору.
+3.4. За порушення етики чи втручання в роботу суддів — попередження, жовта або червона картка.
+3.5. Усі спірні питання вирішує головний суддя або організатор.
+
+
+
+---
+
+4. Правила дисципліни
+
+Порушення	Покарання
+
+Вихід за межі сектору без дозволу	Попередження
+Ловля або підгодовування за межами сектору	Жовта картка
+Перебування без манішки	Жовта картка
+Грубе порушення правил водойми	Червона картка / дискваліфікація
+Використання забороненої оснастки (2 гачки, 3 вудилища тощо)	Дискваліфікація
+Агресивна поведінка, грубість, сп’яніння	Миттєва дискваліфікація
+Приховування риби або маніпуляції з результатом	Дискваліфікація
+
+
+👉 Дві жовті картки = дискваліфікація.
+
+
+---
+
+5. Суддівство
+
+5.1. Судді контролюють:
+
+дотримання регламенту;
+
+правильність оснащення та поводження з рибою;
+
+зважування й точність результатів.
+5.2. Суддя має право зайти у будь-який сектор у будь-який момент.
+5.3. Рішення головного судді є остаточним і не підлягає оскарженню.
+
+
+
+---
+
+6. Безпека та гуманне поводження з рибою
+
+6.1. Обов’язково мати:
+
+короповий мат,
+
+антисептик,
+
+мінімум 5 мішків для риби (по 1 рибі в кожному).
+6.2. Заборонено тримати більше однієї риби в одному мішку.
+6.3. Зважування проводиться в присутності судді, результати фіксуються у протоколі.
+6.4. Фото з рибою дозволене після зважування, після чого риба негайно відпускається у воду.
+6.5. За недбале поводження з рибою або її травмування — жовта чи червона картка.
+
+
+
+---
+
+7. Відповідальність учасників
+
+7.1. Кожен спортсмен (чи команда) відповідає за:
+
+дотримання регламенту;
+
+чистоту сектору;
+
+збереження природи й майна водойми.
+7.2. За порушення одним членом команди — відповідає вся команда.
+7.3. Організатор не несе відповідальності за погодні умови, травми чи втрату майна учасників.
+
+
+
+---
+
+8. Протести та апеляції
+
+8.1. Протест подається особисто головному судді протягом 30 хвилин після інциденту.
+8.2. Без свідків або доказів протест не розглядається.
+8.3. Рішення суддівської колегії є остаточним.
+
+
+---
+
+9. Призи та відзнаки
+
+9.1. Призовий фонд формується організаторами та спонсорами.
+9.2. Основні номінації:
+
+🥇 Загальний переможець турніру (або зона / формат)
+
+🐟 Big Fish — найбільша риба
+
+🤝 Fair Play — спортивна поведінка, приклад для інших
+9.3. Переможці нагороджуються кубками, медалями, сертифікатами та призами від партнерів.
+
+
+
+---
+
+10. Контакти
+
+Для участі або уточнення інформації:
+📞 063 173 1116
+📞 097 882 4845
+
+Організатор: команда DK Два Кума
+Проєкт: STOLAR CARP 2025</p>
 </section>
 </main>
 
 <footer class="footer">
   <div class="container footer__row">
-    <div>© 2025 STOLAR CARP · Львівщина</div>
+    <div>© 2025 STOLAR CARP · Львів</div>
     <div class="footer__links">
       <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
       <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
