--- a/rules.html
+++ b/rules.html
@@ -37,10 +37,10 @@
 
   <h3>Основні пункти</h3>
   <ul>
-    <li>Зони: A, B, C. Сектори визначаються жеребкуванням.</li>
-    <li>Формат «Stalker»: швидкі рішення, мінімум часу на підготовку.</li>
-    <li>Залік: загальна вага, «Big Fish», середня вага.</li>
-    <li>Оновлення протоколів: до 5 хв після зважування.</li>
+    <li>Сектори та зони, визначаються жеребкуванням.</li>
+    <li>Можна зайти і почистити свій сектор до старту</li></li>
+    <li>Залік:загальна вага,при однаковій вазі вирішує «Big Fish»</li>
+    <li>Оновлення протоколів на сайті</li>
     <li>Фінансові умови: внесок не повертається згідно регламенту.</li>
   </ul>
   <p class="form__hint">* 🏆 РЕГЛАМЕНТ ЗМАГАНЬ STOLAR CARP 2025
