--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
   </div>
   <div class="grid grid-2">
     <div class="card">
-      <h3>Наступний тур</h3>
-      <div class="kpi"><span class="num">Лелехівка</span> <span class="tag">STOLAR CARP RELAX</span></div>
+      <div class="kpi">
+  <span class="num">Лелехівка</span>
+  <a href="entries.html" class="tag" style="text-decoration:none;">STOLAR CARP RELAX</a>
+      </div>
       <p class="form__hint">Оновлено: 24.10.2025</p>
     </div>
     <div class="card">
