--- a/entries.html
+++ b/entries.html
@@ -35,11 +35,16 @@
   <section class="container section section--narrow">
     <h1 class="page-title title-gradient">Список зареєстрованих команд</h1>
     <p class="lead muted">Оновлюється автоматично після відправки заявки.</p>
-    <table class="table" id="tbl">
-      <thead>
-        <tr><th>№</th><th>Назва команди</th><th>Капітан</th></tr>
-      </thead>
-      <tbody></tbody>
+    <table>
+  <thead>
+    <tr>
+      <th>№</th>
+      <th>Назва команди</th>
+      <th>Капітан</th>
+      <th>Харчування</th>
+    </tr>
+  </thead>
+  <tbody id="teamList"></tbody>
     </table>
     <p id="state" class="muted">Завантаження…</p>
   </section>
