--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
     <div class="card">
       <h3>Благодійність</h3>
-      <p>Частину внесків спрямовуємо на підтримку захисників.</p>
+      <p>Частину внесків спрямовуємо на підтримку захисників України.</p>
       <span class="badge badge--success">Підтримаймо разом</span>
     </div>
     <div class="card">
@@ -74,7 +74,7 @@
     </div>
     <div class="card">
       <h3>Спонсори</h3>
-      <p>Trinity Baits, Puhach Baits, ВКК, DK Baits, One Hook Baits та інші.</p>
+      <p>Trinity Baits, Puhach Baits, Robin, Charbaits, Flagman, One Hook Baits, Ібіс, ВКК та інші.</p>
     </div>
   </div>
 </section>
