--- a/events/osinniy-korop-2025.html
+++ b/events/osinniy-korop-2025.html
@@ -6,6 +6,16 @@
   <title>Осінній короп STOLAR CARP — Подія</title>
   <link rel="stylesheet" href="../assets/css/main.css">
   <script defer src="../assets/js/config.js"></script>
+  <style>
+    .event-info ul { list-style:none; padding:0; }
+    .event-info li { margin-bottom:8px; font-size:1rem; }
+    .event-actions { margin-top:20px; display:flex; gap:10px; flex-wrap:wrap; }
+    .btn { padding:10px 18px; border-radius:10px; font-weight:600; text-decoration:none; }
+    .btn--primary { background:#6b5bff; color:#fff; }
+    .btn--accent { background:#d23b3b; color:#fff; }
+    .btn--dark { background:#191a1d; color:#fff; }
+    .banner { width:100%; border-radius:16px; margin:20px 0; }
+  </style>
 </head>
 <body>
 <header class="header">
@@ -40,7 +50,7 @@
       <ul>
         <li>📅 <strong>Дати проведення:</strong> 24–26 жовтня 2025</li>
         <li>📍 <strong>Локація:</strong> Водойма Лелехівка, Львівська обл.</li>
-        <li>🎯 <strong>Формат:</strong>Закриття сезону 2025</li>
+        <li>🎯 <strong>Формат:</strong> Командні змагання</li>
         <li>👥 <strong>Ліміт:</strong> 24 команди</li>
         <li>💸 <strong>Вступний внесок:</strong> 4000 грн з команди</li>
         <li>💬 <strong>Статус:</strong> Реєстрація відкрита</li>
@@ -52,6 +62,13 @@
       <a href="../live.html" class="btn btn--accent">Live-протокол</a>
       <a href="../entries.html" class="btn btn--dark">Список команд</a>
     </div>
+
+    <hr style="margin:30px 0; opacity:0.2;">
+
+    <p class="muted">
+      Частину внесків буде спрямовано на <strong>підтримку захисників України</strong>.  
+      Ми дякуємо кожній команді за участь та внесок у розвиток спортивного карпфішингу.
+    </p>
   </section>
 </main>
 
