--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="card">
       <div class="kpi">
   <span class="num">Лелехівка</span>
-<a href="події/осінній-короп-2025.html" class="tag tag--event">Осінній короп</a>
+<a href="events/osinniy-korop-2025.html" class="tag tag--clickable">Осінній короп</a>
       </div>
       <p class="form__hint">Оновлено: 24.10.2025</p>
     </div>
