--- a/index.html
+++ b/index.html
@@ -100,3 +100,21 @@
 </footer>
 </body>
 </html>
+<style>
+.tag--clickable {
+  background: linear-gradient(90deg, #ffb300, #ff6a00);
+  color: #000;
+  font-weight: 600;
+  text-decoration: none;
+  border-radius: 10px;
+  padding: 4px 10px;
+  transition: 0.25s ease;
+}
+
+.tag--clickable:hover {
+  background: linear-gradient(90deg, #ffce00, #ff8400);
+  transform: scale(1.05);
+  cursor: pointer;
+  box-shadow: 0 0 10px rgba(255, 200, 0, 0.4);
+}
+</style>
