--- a/events/osinniy-korop-2025.html
+++ b/events/osinniy-korop-2025.html
@@ -44,7 +44,7 @@
       Подія пройде на водоймі <strong>Лелехівка</strong> з 24 по 27 жовтня 2025 року.
     </p>
 
-    <img class="banner" src="../assets/lelekhivka.jpg" alt="Лелехівка — Осінній короп STOLAR CARP">
+    <img class="banner" src="../assets/lelekhivka-logo.jpg" alt="Лелехівка — Осінній короп STOLAR CARP">
 
     <div class="event-info">
       <ul>
