--- a/events/osinniy-korop-2025.html
+++ b/events/osinniy-korop-2025.html
@@ -66,8 +66,12 @@
     <hr style="margin:30px 0; opacity:0.2;">
 
     <p class="muted">
-      Частину внесків буде спрямовано на <strong>підтримку захисників України</strong>.  
-      Ми дякуємо кожній команді за участь та внесок у розвиток спортивного карпфішингу.
+      🎣 Осінній короп STOLAR CARP 2025
+
+Головний турнір осені, який проводиться спільно з водоймою Лелехівка!
+Попереду — 2 дні азарту, боротьби й справжніх емоцій на одному з найкращих озер Львівщини.
+
+🏆 На учасників чекають кубки, призи та подарунки від наших спонсорів і партнерів озера Лелехівка.
     </p>
   </section>
 </main>
