--- a/events/osinniy-korop-2025.html
+++ b/events/osinniy-korop-2025.html
@@ -40,8 +40,8 @@
     <h1 class="page-title title-gradient">Осінній короп STOLAR CARP</h1>
 
     <p class="lead">
-      Головний турнір сезону 2025 року. Формат — <strong>STOLAR CARP RELAX</strong>.  
-      Подія пройде на водоймі <strong>Лелехівка</strong> з 24 по 27 жовтня 2025 року.
+      Головний турнір сезону 2025 року. Формат — <strong>STOLAR </strong>.  
+      Подія пройде на водоймі <strong>Лелехівка</strong> з 24 по 26 жовтня 2025 року.
     </p>
 
     <img class="banner" src="../assets/lelekhivka-logo.jpg" alt="Лелехівка — Осінній короп STOLAR CARP">
