--- a/events/osinniy-korop-2025.html
+++ b/events/osinniy-korop-2025.html
@@ -40,7 +40,7 @@
     <h1 class="page-title title-gradient">Осінній короп STOLAR CARP</h1>
 
     <p class="lead">
-      Головний турнір сезону 2025 року. Формат — <strong>STOLAR </strong>.  
+      Головний турнір сезону 2025 року. Формат — <strong>Командні змагання</strong>.  
       Подія пройде на водоймі <strong>Лелехівка</strong> з 24 по 26 жовтня 2025 року.
     </p>
 
