--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+
   <!-- HEADER автоматично підтягується -->
   <div id="app-header"></div>
 
@@ -75,46 +76,9 @@
 
   <!-- FOOTER автоматично підтягується -->
   <div id="app-footer"></div>
-</body>
-</html>      <a href="sponsors.html" class="nav__link">Спонсори</a>
-    </nav>
-    <button class="burger" id="burger" aria-label="Меню">
-      <span></span><span></span><span></span>
-    </button>
-  </div>
-</header>
 
-<main class="main">
-<section class="hero container">
-  <div class="hero__card">
-    <span class="hero__kicker">Сезон 2025</span>
-    <h1>STOLAR CARP — змагання з риболовлі</h1>
-    <p>Офіційний сайт серії турнірів у Львівській області. Реєстрація, регламент, live-протоколи та рейтинг.</p>
-    <div class="cta-row">
-      <a class="btn btn--primary" href="register.html">Подати заявку</a>
-      <a class="btn btn--ghost" href="rules.html">Переглянути регламент</a>
-      <a class="btn btn--danger" href="live.html">Live протокол</a>
-    </div>
-  </div>
-  <div class="grid grid-2">
-    <div class="card">
-      <div class="kpi">
-  <span class="num">Лелехівка</span>
-<a href="events/osinniy-korop-2025.html" class="tag tag--clickable">Осінній короп</a>
-      </div>
-      <p class="form__hint">Оновлено: 24.10.2025</p>
-    </div>
-    <div class="card">
-      <h3>Благодійність</h3>
-      <p>Частину внесків спрямовуємо на підтримку захисників України.</p>
-      <span class="badge badge--success">Підтримаймо разом</span>
-    </div>
-    <div class="card">
-      <h3>Швидкі протоколи</h3>
-      <p>Оновлення до 5 хв після зважування за участю команди.</p>
-      <span class="badge badge--warn">Правило в регламенті</span>
-    </div>
-    <div class="card">
+</body>
+</html>    <div class="card">
       <h3>Спонсори</h3>
       <p>Trinity Baits, Puhach Baits, Robin, Charbaits, Flagman, One Hook Baits, Ібіс, ВКК та інші.</p>
     </div>
