--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="card">
           <div class="kpi">
             <span class="num">Лелехівка</span>
-            <a href="/stolarcarp-site/events/осінній-короп-2025.html" class="badge badge--warn">Осінній короп</a>
+            <a href="events/осінній-короп-2025.html" class="badge badge--warn">Осінній короп</a>
           </div>
           <p class="form__hint">Оновлено: 24.10.2025</p>
         </div>
@@ -57,7 +57,7 @@
 
         <div class="card">
           <h3>Спонсори</h3>
-          <p>Trinity Baits, Puhach Baits, DK Baits, VKK</p>
+          <p>Trinity Baits,Robin, Puhach Baits, Charbaits, Ібіс, VKK</p>
         </div>
       </div>
 
