--- a/rules.html
+++ b/rules.html
@@ -15,14 +15,15 @@
       <span class="logo__text">STOLAR CARP</span>
     </a>
     <nav class="nav" id="nav">
-      <a href="index.html" class="nav__link">Головна</a>
-      <a href="rules.html" class="nav__link nav__link--active">Регламент</a>
-      <a href="register.html" class="nav__link">Реєстрація</a>
-      <a href="live.html" class="nav__link">Live</a>
-      <a href="rating.html" class="nav__link">Рейтинг</a>
-      <a href="lakes.html" class="nav__link">Водойми</a>
-      <a href="sponsors.html" class="nav__link">Спонсори</a>
-    </nav>
+  <a href="index.html" class="nav__link">Головна</a>
+  <a href="rules.html" class="nav__link">Регламент</a>
+  <a href="register.html" class="nav__link">Реєстрація</a>
+  <a href="live.html" class="nav__link">Live</a>
+  <a href="rating.html" class="nav__link">Рейтинг</a>
+  <a href="lakes.html" class="nav__link">Водойми</a>
+  <a href="sponsors.html" class="nav__link">Спонсори</a>
+  <a href="turnir-2026.html" class="nav__link">Турнір 2026</a>
+</nav>
     <button class="burger" id="burger"><span></span><span></span><span></span></button>
   </div>
 </header>
