--- a/index.html
+++ b/index.html
@@ -16,7 +16,28 @@
 </head>
 
 <body>
-
+<header class="header">
+  <div class="container header__row">
+    <a class="logo" href="index.html">
+      <img src="assets/DK-PRIME/dk-dva-kuma-banner.jpg" alt="STOLAR CARP Logo" class="logo__img" />
+      <span class="logo__text">STOLAR CARP</span>
+    </a>
+    <nav class="nav" id="nav">
+      <a href="index.html" class="nav__link">Головна</a>
+      <a href="rules.html" class="nav__link">Регламент</a>
+      <a href="register.html" class="nav__link">Реєстрація</a>
+      <a href="live.html" class="nav__link">Live</a>
+      <a href="rating.html" class="nav__link">Рейтинг</a>
+      <a href="lakes.html" class="nav__link">Водойми</a>
+      <a href="sponsors.html" class="nav__link">Спонсори</a>
+    </nav>
+    <button class="burger" id="burger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+  </div>
+</header>
   <!-- HEADER автоматично підтягується -->
   <div id="app-header"></div>
 
