--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
     </button>
   </div>
 </header>
+  <section class="hero">
+  <div class="container">
+    <h1>STOLAR CARP 2025</h1>
+    <p>Офіційний сайт серії турнірів з карпфішингу у Львівській області...</p>
+  </div>
+  </section>
   <!-- HEADER автоматично підтягується -->
   <div id="app-header"></div>
 
